Added sample graph JSONS, and Route.java activity which will eventually display the route

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,8 @@ android {
 
 dependencies {
 
+    implementation 'org.jgrapht:jgrapht-core:1.5.0'
+    implementation group: 'org.jgrapht', name: 'jgrapht-io', version: '1.5.0'
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.5.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
