--- a/.github/workflows/run-unit-tests.yml
+++ b/.github/workflows/run-unit-tests.yml
@@ -12,6 +12,9 @@ jobs:
         with:
           distribution: 'zulu'
           java-version: '11'
+          
+      - name: Grant execute permission for gradlew
+        run: chmod +x gradlew
 
       # Execute unit tests
       - name: Unit Test
