--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,10 +40,10 @@ android {
 }
 
 dependencies {
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     def room_version = "2.4.2"
     def gson_version = "2.9.0"
     def jgrapht_version = "1.5.0"
-
 
     implementation "androidx.room:room-runtime:$room_version"
     annotationProcessor "androidx.room:room-compiler:$room_version"
