--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,7 @@ android {
 }
 
 dependencies {
+    androidTestImplementation 'androidx.test:rules:1.4.1-alpha06'
     def room_version = "2.4.2"
     def gson_version = "2.9.0"
     def jgrapht_version = "1.5.0"
@@ -62,5 +63,5 @@ dependencies {
     testImplementation 'androidx.test:core:1.3.0'
     testImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0-alpha06'
 }
