Niall - Refactoring for Directions, made exhibit counter decrement work

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,7 +28,7 @@
         project's local.properties file (e.g. MAPS_API_KEY=Aiza...), and replace the
         "YOUR_API_KEY" string in this file with "${MAPS_API_KEY}".
    -->
-        <meta-data
+        <metbbbba-data
             android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyDUGprSH5Annk6avZNfPO0PxxxozoVJ8KI" />
         <activity
